--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,8 @@
 }
 
 /* Main Styling */
-html, body {
+html,
+body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   line-height: 1.7em;
 }
@@ -18,7 +19,9 @@ a {
   cursor: pointer;
 }
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
   padding-bottom: 20px;
 }
 
@@ -32,6 +35,29 @@ p {
   margin: auto;
   overflow: auto;
   padding: 0 20px;
+}
+
+.text-primary {
+  color: #f7c08a;
+}
+
+.lead {
+  font-size: 20px;
+}
+
+.btn {
+  display: inline-block;
+  font-size: 18px;
+  background: #333;
+  color: #fff;
+  padding: 13px 20px;
+  border: none;
+  cursor: pointer;
+}
+
+.btn:hover {
+  background: #f7c08a;
+  color: #333
 }
 
 /* Navbar */
@@ -69,4 +95,27 @@ p {
 #navbar ul li a.current {
   background: #444;
   color: #f7c08a;
+}
+
+/* Showcase */
+
+#showcase {
+  background: url(../images/showcase.jpg) no-repeat center center/cover;
+  height: 600px;
+}
+
+#showcase .showcase-content {
+  color: #fff;
+  text-align: center;
+  padding-top: 170px;
+}
+
+#showcase .showcase-content h1 {
+  font-size: 60px;
+  line-height: 1.2em;
+}
+
+#showcase .showcase-content p {
+  padding-bottom: 20px;
+  line-height: 1.7em;
 }
