--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,10 @@ p {
   font-size: 20px;
 }
 
+.clr {
+  clear: both;
+}
+
 .btn {
   display: inline-block;
   font-size: 18px;
@@ -76,8 +80,8 @@ p {
 }
 
 .bg-primary {
-  background: #333;
-  color: #f7c08a;
+  background: #f7c08a;
+  color: #333;
 }
 
 /* Navbar */
@@ -165,4 +169,24 @@ p {
 
 #home-info .info-content p {
   margin-bottom: 30px;
+}
+
+/* Features */
+.box {
+  float: left;
+  width: 33.3%;
+  padding: 50px;
+  text-align: center;
+}
+
+.box i {
+  margin-bottom: 10px;
+}
+
+/* Footer */
+#main-footer {
+  background: #444;
+  color: #fff;
+  text-align: center;
+  padding: 20px;
 }
