--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,7 @@ p {
 
 .l-heading {
   font-size: 40px;
+  line-height: 1.2;
 }
 
 /* Padding */
@@ -112,7 +113,7 @@ p {
   color: #fff;
 }
 
-#navbar h1 {
+#navbar .logo {
   float: left;
   padding-top: 20px;
 }
@@ -164,7 +165,7 @@ p {
 /* Home Info */
 
 #home-info {
-  height: 400px;
+  height: 450px;
   ;
 }
 
@@ -222,7 +223,7 @@ p {
 
 /* Testimonials */
 #testimonials {
-  height: 600px;
+  height: 100%;
   background: url("../images/test-bg.jpg") no-repeat center center/cover;
   padding-top: 100px;
 }
